blog/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  selector:
    matchLabels:
      app: blog
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: <HUGO_BLOG_IMAGE> # the real value will be replaced in cloudbuild step
          imagePullPolicy: Always
          ports:
            - containerPort: 80
