blog/k8s/blog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zibou
  annotations:
    networking.gke.io/managed-certificates: zibou-cert
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    spec.ingressClassName: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: zibou-ip
    networking.gke.io/v1beta1.FrontendConfig: "zibou-frontend-config"
spec:
  defaultBackend:
    service:
      name: blog
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: NodePort
  ports:
    - port: 80 
      protocol: TCP
      targetPort: 80
  selector:
    app: blog

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  selector:
    matchLabels:
      app: blog 
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: blog 
    spec:
      containers:
      - name: blog 
        image: namnguyen107/blog:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
